# chatbot-instruction-understanding

./: .gitignore  Generator_inference.py  README.md
Daliy Standup/: 260410 meeting.md  260413 meeting.md  260414 meeing.md  260414 meeting.md  260415 meeting.md  260416 meeting.md
data/sample/Training/TL_국립아시아문화전당_분류/: 01_분류_000012_1.json  01_분류_000012_2.json  01_분류_000012_3.json
data/sample/Training/TL_중앙행정기관_분류/: 01_분류_300001_1.json
data/sample/Training/TL_중앙행정기관_요약/: 02_요약_300001_1.json  02_요약_300001_2.json
data/sample/Training/TL_지방행정기관_요약/: 02_요약_000022_2.json  02_요약_000022_3.json
data/sample/Training/TL_지방행정기관_질의응답/: 03_질의응답_000022_1.json  03_질의응답_000022_3.json
instruct-classifier-platform/: README.md
instruct-classifier-platform/apps/frontend-react/: index.html  package-lock.json  package.json  vite.config.js
instruct-classifier-platform/apps/inference-service/: __init__.py  pyproject.toml
instruct-classifier-platform/apps/inference-service/src/inference_service/: main.py
instruct-classifier-platform/apps/inference-service/src/inference_service/api/: routes.py
instruct-classifier-platform/apps/inference-service/src/inference_service/classifier/: __init__.py  model.py
instruct-classifier-platform/apps/inference-service/src/inference_service/generator/: __init__.py  model.py
instruct-classifier-platform/checkpoints/koelectra_task_cls_result/: config.json  history.json  label_map.json
instruct-classifier-platform/checkpoints/qwen_result/: adapter_config.json
notebooks/: Project2_data_convert.ipynb
src/: README.md  preprocess_pipeline.py
(+43 files in other folders)
