[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "inference-service"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "peft>=0.10.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]